# luma-impl

./: Cargo.toml  clippy.toml
.github/workflows/: ci.yml
crates/access-range.lib/: Cargo.toml
crates/access-range.lib/src/: lib.rs
crates/accum.lib/: Cargo.toml
crates/accum.lib/src/: accum_test.rs  lib.rs  test.rs
crates/add-monoid.lib/: Cargo.toml
crates/add-monoid.lib/src/: lib.rs
crates/algebraic-structure/group-quick.lib/: Cargo.toml
crates/algebraic-structure/group-quick.lib/src/: lib.rs
crates/algebraic-structure/semi-group-quick.lib/: Cargo.toml
crates/algebraic-structures.col/com-ring-ord.lib/: Cargo.toml  com-ring-ord.md
crates/algebraic-structures.col/com-ring.lib/: Cargo.toml  com-ring.md
crates/algebraic-structures.col/com-ring/to-mul.lib/: Cargo.toml
crates/algebraic-structures.col/commutative-field.lib/: Cargo.toml
crates/algebraic-structures.col/commutative-ring-ord.lib/: Cargo.toml
crates/algebraic-structures.col/commutative-ring.lib/: Cargo.toml
crates/algebraic-structures.col/commutative-ring/as-additive-group.lib/: Cargo.toml
crates/algebraic-structures.col/commutative-ring/as-additive-group.lib/src/: lib.rs
crates/algebraic-structures.col/commutative-ring/as-multicative-commutative-monoid.lib/: Cargo.toml
crates/algebraic-structures.col/commutative-ring/as-multicative-commutative-monoid.lib/src/: lib.rs
crates/algebraic-structures.col/field.lib/: Cargo.toml  field.md
crates/algebraic-structures.col/int.lib/: Cargo.toml
crates/algebraic-structures.col/int.lib/src/: lib.rs
crates/algebraic-structures.col/monoid.col/add-monoid.lib/: Cargo.toml
crates/algebraic-traits.lib/: Cargo.toml
crates/algebraic-traits.lib/src/: commutative_ring.rs  group.rs  lib.rs
crates/ceil-log2.lib/: Cargo.toml
crates/ceil-log2.lib/src/: lib.rs  test.rs
crates/commutative-field.lib/: Cargo.toml
crates/lazy-segment-tree.lib/: Cargo.toml
crates/lazy-segment-tree.lib/src/: lazy_segment_tree_test.rs  lib.rs
crates/lazy-segment-tree/core.lib/: Cargo.toml
crates/lazy-segment-tree/core.lib/src/: lazy_segment_tree_test.rs  lib.rs
crates/lazy-segment-tree/util.lib/: Cargo.toml
crates/lazy-segment-tree/util.lib/src/: lazy_segment_tree_util_test.rs  lib.rs
crates/lazy-segment-tree/util/add-max-count.lib/: Cargo.toml
crates/lazy-segment-tree/util/add-max-count.lib/src/: lib.rs
crates/lazy-segment-tree/util/add-min-max-count.lib/: Cargo.toml  doc_new_add_max_count.md  doc_new_add_min_count.md
crates/lazy-segment-tree/util/add-min-max-count.lib/src/: lib.rs
crates/lazy-segment-tree/util/add-min-max.lib/: Cargo.toml  doc_new_add_max.md  doc_new_add_min.md
crates/lazy-segment-tree/util/add-min-max.lib/src/: lib.rs
crates/lazy-segment-tree/util/add-sum.lib/: Cargo.toml  doc_new_add_sum_monoid.md
crates/lazy-segment-tree/util/add-sum.lib/src/: lib.rs
crates/lazy-segment-tree/util/set-max.lib/: Cargo.toml  doc_new_set_max.md
crates/lazy-segment-tree/util/set-max.lib/src/: lib.rs
crates/lazy-segment-tree/util/set-min-count-without-max.lib/: Cargo.toml
crates/lazy-segment-tree/util/set-min-count-without-max.lib/src/: lib.rs
crates/lazy-segment-tree/util/set-min-count.lib/: Cargo.toml
crates/lazy-segment-tree/util/set-min-count.lib/src/: lib.rs
crates/lazy-segment-tree/util/set-min-max-count.lib/: Cargo.toml  doc_new_set_max_count.md  doc_new_set_min_count.md
crates/lazy-segment-tree/util/set-min-max-count.lib/src/: lib.rs
crates/lazy-segment-tree/util/set-sum.lib/: Cargo.toml  doc_new_set_sum.md  doc_new_set_sum_monoid.md
crates/lazy-segment-tree/util/set-sum.lib/src/: lib.rs
crates/max-count.lib/: Cargo.toml
crates/max-count.lib/src/: lib.rs
crates/max-exists.lib/: Cargo.toml
crates/max-exists.lib/src/: lib.rs
crates/max-monoid.lib/: Cargo.toml
crates/max-monoid.lib/src/: lib.rs
crates/min-count.lib/: Cargo.toml
crates/min-count.lib/src/: lib.rs
crates/min-exists.lib/src/: lib.rs
crates/min-max-count.lib/: Cargo.toml
crates/min-max-count.lib/src/: lib.rs
crates/min-monoid.lib/: Cargo.toml
crates/min-monoid.lib/src/: lib.rs
crates/monoid-action.lib/: trait_description.md
crates/monoid.lib/src/: lib.rs
crates/paint-rect-calc-area.lib/: Cargo.toml
crates/paint-rect-calc-area.lib/src/: lib.rs  paint_rect_calc_area_test.rs
crates/permutation.lib/: Cargo.toml
crates/permutation.lib/src/: lib.rs  permutation_test.rs
crates/segment-tree-by-add.lib/: Cargo.toml
crates/segment-tree-by-add.lib/src/: lib.rs
crates/segment-tree-by-max.lib/: Cargo.toml
crates/segment-tree-by-max.lib/src/: lib.rs
crates/segment-tree-by-min.lib/: Cargo.toml
crates/segment-tree-by-min.lib/src/: lib.rs
crates/segment-tree.lib/: Cargo.toml
crates/segment-tree.lib/src/: lib.rs  segment_tree_test.rs  test.rs
crates/segment-tree/core.lib/: Cargo.toml
crates/segment-tree/core.lib/src/: lib.rs  test.rs
crates/segment-tree/util/add.lib/: Cargo.toml
crates/segment-tree/util/add.lib/src/: lib.rs
crates/segment-tree/util/min-max.lib/: Cargo.toml  doc_new_max.md  doc_new_min.md
crates/segment-tree/util/min-max.lib/src/: lib.rs
crates/segment-tree/util/min.lib/: Cargo.toml
crates/segment-tree/util/min.lib/src/: lib.rs
crates/segment-tree/util/new-with-len.lib/: Cargo.toml
crates/segment-tree/util/new-with-len.lib/src/: lib.rs
crates/segment-tree/util/sum.lib/: Cargo.toml  doc_new_sum.md
crates/segment-tree/util/sum.lib/src/: lib.rs
crates/shrink/core.lib/: Cargo.toml
crates/shrink/provider.lib/: Cargo.toml
crates/transparent-derive.lib/: Cargo.toml
crates/transparent-derive.lib/src/: lib.rs
crates/transparent-trait.lib/src/: lib.rs
crates/transparent/derive.lib/: Cargo.toml
crates/transparent/trait.lib/: Cargo.toml
crates/tuple-vec.lib/: Cargo.toml
crates/tuple-vec.lib/src/: lib.rs
crates/with-max.lib/: Cargo.toml
crates/with-max.lib/src/: lib.rs
crates/with-min.lib/: Cargo.toml
crates/with-min.lib/src/: lib.rs
crates/with-size.lib/: Cargo.toml
crates/with-size.lib/src/: lib.rs
scripts/: cargo.sh  cargo_watch_check.sh  cargo_watch_test.sh
(+92 files in other folders)
