[package]
name = "accum"
version = "0.1.0"
edition = "2021"

[dependencies]
access-range = { path = "../access-range.lib" }
commutative-ring = { path = "../algebraic-structures.col/commutative-ring.lib" }
group = { path = "../algebraic-structures.col/group.lib" }

[dev-dependencies]
tuple-vec = { path = "../tuple-vec.lib" }
