[package]
name = "accum"
version = "0.1.0"
edition = "2021"

[dependencies]
access-range = { path = "../access-range.lib" }
commutative-ring = { path = "../algebraic-structures.col/commutative-ring/core.lib" }
commutative-ring-as-additive-group = { path = "../algebraic-structures.col/commutative-ring/as-additive-group.lib" }
group = { path = "../algebraic-structures.col/group/core.lib" }
