[package]
name = "segment-tree-by-add"
version = "0.1.0"
edition = "2021"

[dependencies]
add-monoid = { path = "../algebraic-structures.col/monoid.col/add-monoid.lib" }
commutative-ring = { path = "../algebraic-structures.col/commutative-ring/core.lib" }
segment-tree = { path = "../segment-tree.lib" }
