[package]
name = "segment-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
monoid = { path = "../monoid.lib" }
access-range = { path = "../access-range.lib" }
transparent-trait = { path = "../transparent-trait.lib" }
ceil-log2 = { path = "../ceil-log2.lib" }

[dev-dependencies]
min-monoid = { path = "../min-monoid.lib" }
max-monoid = { path = "../max-monoid.lib" }
add-monoid = { path = "../add-monoid.lib" }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
