[package]
name = "lazy-segment-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
access-range = { path = "../../access-range.lib" }
ceil-log2 = { path = "../../ceil-log2.lib" }
lazy-segment-tree-util-type = { path = "../util/type.lib" }
monoid-action = { path = "../../algebraic-structures.col/monoid.col/monoid-action.lib" }
transparent-trait = { path = "../../transparent/trait.lib" }

[dev-dependencies]
lazy-segment-tree-util-new-with-len = { path = "../util/new-with-len.lib" }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
