[package]
name = "lazy-segment-tree-util"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy-segment-tree = { path = "../core.lib" }
lazy-segment-tree-util-add-max = { path = "../util/add-max.lib" }
lazy-segment-tree-util-add-min = { path = "../util/add-min.lib" }
lazy-segment-tree-util-add-min-max-count = { path = "../util/add-min-max-count.lib" }
lazy-segment-tree-util-add-sum = { path = "../util/add-sum.lib" }
lazy-segment-tree-util-new-with-len = { path = "../util/new-with-len.lib" }
lazy-segment-tree-util-new-with-range = { path = "../util/new-with-range.lib" }
lazy-segment-tree-util-set-min-max = { path = "../util/set-min-max.lib" }
lazy-segment-tree-util-set-min-max-count = { path = "../util/set-min-max-count.lib" }
lazy-segment-tree-util-set-sum = { path = "../util/set-sum.lib" }
lazy-segment-tree-util-set-sum-general = { path = "../util/set-sum-general.lib" }
lazy-segment-tree-util-type = { path = "../util/type.lib" }
