[package]
name = "com-ring-to-mul"
version = "0.1.0"
edition = "2021"

[dependencies]
com-ring = { path = "../core.lib" }
commutative-monoid = { path = "../../monoid.col/commutative-monoid.lib" }
monoid = { path = "../../monoid.col/monoid.lib" }
transparent-derive = { path = "../../../transparent/derive.lib" }
transparent-trait = { path = "../../../transparent/trait.lib" }
