[package]
name = "commutative-ring-as-additive-group"
version = "0.1.0"
edition = "2021"

[dependencies]
commutative-ring = { path = "../core.lib" }
group = { path = "../../group/core.lib" }
transparent-derive = { path = "../../../transparent/derive.lib" }
transparent-trait = { path = "../../../transparent/trait.lib" }
