[package]
name = "commutative-ring-as-multicative-commutative-monoid"
version = "0.1.0"
edition = "2021"

[dependencies]
commutative-monoid = { path = "../../monoid.col/commutative-monoid.lib" }
commutative-ring = { path = "../core.lib" }
monoid = { path = "../../monoid.col/monoid.lib" }
transparent-derive = { path = "../../../transparent/derive.lib" }
transparent-trait = { path = "../../../transparent/trait.lib" }
