[package]
name = "add-monoid"
version = "0.1.0"
edition = "2021"

[dependencies]
commutative-ring = { path = "../../commutative-ring.lib" }
monoid = { path = "../monoid.lib" }
transparent-derive = { path = "../../../transparent/derive.lib" }
transparent-trait = { path = "../../../transparent/trait.lib" }
