[package]
name = "lazy-segment-tree-util-add-max-count"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy-segment-tree = { path = "../../core.lib" }
lazy-segment-tree-util-type = { path = "../type.lib" }
max-count = { path = "../../../max-count.lib" }
min-exists = { path = "../../../min-exists.lib" }
