[package]
name = "lazy-segment-tree-util-add-min-max-count"
version = "0.1.0"
edition = "2021"

[dependencies]
commutative-ring = { path = "../../../algebraic-structures.col/commutative-ring.lib" }
commutative-ring-ord = { path = "../../../algebraic-structures.col/commutative-ring-ord.lib" }
lazy-segment-tree = { path = "../../core.lib" }
lazy-segment-tree-util-type = { path = "../type.lib" }
max-exists = { path = "../../../algebraic-structures.col/ord.col/max-exists.lib" }
min-exists = { path = "../../../algebraic-structures.col/ord.col/min-exists.lib" }
min-max-count = { path = "../../../min-max-count.lib" }
shrink-provider = { path = "../../../shrink/provider.lib" }
