[package]
name = "lazy-segment-tree-util-add-min-max"
version = "0.1.0"
edition = "2021"

[dependencies]
com-ring-ord = { path = "../../../algebraic-structures.col/com-ring-ord.lib" }
lazy-segment-tree = { path = "../../core.lib" }
lazy-segment-tree-util-type = { path = "../type.lib" }
max-exists = { path = "../../../algebraic-structures.col/ord.col/max-exists.lib" }
min-exists = { path = "../../../algebraic-structures.col/ord.col/min-exists.lib" }
