[package]
name = "lazy-segment-tree-util-add-sum"
version = "0.1.0"
edition = "2021"

[dependencies]
com-ring = { path = "../../../algebraic-structures.col/com-ring.lib" }
com-ring-ord = { path = "../../../algebraic-structures.col/com-ring-ord.lib" }
group-to-monoid = { path = "../../../algebraic-structures.col/group/to-monoid.lib" }
lazy-segment-tree = { path = "../../core.lib" }
lazy-segment-tree-util-new-with-len = { path = "../new-with-len.lib" }
lazy-segment-tree-util-type = { path = "../type.lib" }
monoid = { path = "../../../algebraic-structures.col/monoid.col/monoid.lib" }
shrink-provider = { path = "../../../shrink/provider.lib" }
transparent-trait = { path = "../../../transparent/trait.lib" }
