[package]
name = "lazy-segment-tree-util-set-max"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy-segment-tree = { path = "../../core.lib" }
lazy-segment-tree-util-type = { path = "../type.lib" }
min-exists = { path = "../../../algebraic-structures.col/ord.col/min-exists.lib" }
monoid-action-set-max = { path = "../../../algebraic-structures.col/monoid.col/well-known.col/monoid-action/set-max.lib" }
