[package]
name = "lazy-segment-tree-util-set-min-max-count"
version = "0.1.0"
edition = "2021"

[dependencies]
com-ring = { path = "../../../algebraic-structures.col/com-ring/core.lib" }
lazy-segment-tree = { path = "../../core.lib" }
lazy-segment-tree-util-new-with-len = { path = "../new-with-len.lib" }
lazy-segment-tree-util-type = { path = "../type.lib" }
max-exists = { path = "../../../algebraic-structures.col/ord.col/max-exists.lib" }
min-exists = { path = "../../../algebraic-structures.col/ord.col/min-exists.lib" }
min-max-count = { path = "../../../min-max-count.lib" }
shrink-provider = { path = "../../../shrink/provider.lib" }
