[package]
name = "segment-tree-util-min-max"
version = "0.1.0"
edition = "2021"

[dependencies]
max-exists = { path = "../../../algebraic-structures.col/ord.col/max-exists.lib" }
max-monoid = { path = "../../../algebraic-structures.col/monoid.col/well-known.col/max-monoid.lib" }
min-exists = { path = "../../../algebraic-structures.col/ord.col/min-exists.lib" }
segment-tree = { path = "../../core.lib" }
segment-tree-util-type = { path = "../type.lib" }
