[package]
name = "segment-tree-util-min"
version = "0.1.0"
edition = "2021"

[dependencies]
max-exists = { path = "../../../algebraic-structures.col/ord.col/max-exists.lib" }
min-monoid = { path = "../../../algebraic-structures.col/monoid.col/min-monoid.lib" }
segment-tree = { path = "../../core.lib" }
